# apr-project

./: .gitignore  AGENTS.md  BUGHUNT.md  CLAUDE.md  CODEX.md  PROJECT.md  README.md  findings.md  progress.md  pyproject.toml  requirements.txt  task_plan.md
PluginInfo/: README.md  code-simplifier.md  planning-with-files.md  pyright.md  supabase.md  superpowers.md
data/: README.md
docs/: 2026-03-15-paper-rewrite-audit-results.md  AGENTS.md  AP_Research_POD_Corrected.pptx  AP_Research_POD_Revised.pptx  architecture-and-analysis.md  code-review-log.md  data-split-change.md  finalization-checklist.md  lstm-issues.md  paper-framing-notes.md  paper-notes.md  paper.md  pod-presentation-guide.md  status-2026-01-22.md  verified-numbers.md
docs/plans/: 2026-01-16-nfl-upset-implementation-plan.md  2026-01-16-nfl-upset-xgboost-lstm-design.md  2026-02-05-research-pivot.md
frontend/: index.html  serve.py
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_xgboost_model.ipynb  04_lstm_model.ipynb  05_comparison_analysis.ipynb
scripts/: create_pod_pptx.py  rewrite_presentation.py
src/: __init__.py
src/data/: __init__.py  betting_loader.py  elo.py  epa_loader.py  generate_features.py  merger.py  nfl_loader.py  verify_data.py
src/evaluation/: __init__.py  calibration.py  comparison.py  disagreement.py  metrics.py  report.py  shap_analysis.py
src/features/: __init__.py  matchup.py  pipeline.py  rolling.py  target.py
src/models/: __init__.py  cv_splitter.py  evaluate_test_set.py  logistic_model.py  lstm_config.py  (+9 more)
tests/: test_integration.py
(+32 files in other folders)
